# monch

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: build.yml
monch_io/: Cargo.toml
monch_io/src/: lib.rs  path.rs
monch_shell/: Cargo.toml
monch_shell/src/: builtin.rs  cbor_display.rs  error.rs  exe.rs  interpreter.rs  lib.rs  main.rs  streams.rs  types.rs
monch_syntax/: Cargo.toml
monch_syntax/src/: ast.rs  lib.rs  monch.pest  parser.rs
monch_syntax/tests/: snapshots.rs
monch_syntax/tests/fixtures/: basic.example.monch  oneline.example.monch
monch_syntax/tests/snapshots/: snapshots__snapshot_script@basic.example.monch.snap  snapshots__snapshot_script@oneline.example.monch.snap
monch_util_get/: Cargo.toml
monch_util_grep/: Cargo.toml
monch_util_ls/: Cargo.toml
monch_util_sed/: Cargo.toml
monch_util_sed/src/: main.rs
