[package]
name = "monch_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
monch_syntax = { path = "../monch_syntax" }
os_pipe = "0.9.2"
rustyline = "9.0.0"
thiserror = "1.0.30"
which = "4.2.2"

[features]
