[package]
name = "monch_shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
monch_syntax = { path = "../monch_syntax" }
monch_io = { path = "../monch_io" }
os_pipe = "0.9.2"
owo-colors = "3.1.0"
ciborium = "0.2.0"
serde = "1"
rustyline = "9.0.0"
thiserror = "1.0.30"
which = "4.2.2"

[features]
